* CHD-50 Fixed issue in IE6 where the "Undo" div was too wide for it's container, and the close button was going off the screen. Fixed by eliminating the table inside the div and using CSS positioning.
git-svn-id: http://svn.webgroupmedia.com/cerb4/cerb4@213 58cff151-b722-0410-b014-f78a459f8f02

--- a/styles/default/cerberus.css
+++ b/styles/default/cerberus.css
@@ -222,6 +222,7 @@ DIV.block {
 	padding:5px;
 	background-image:url(bg_block.jpg);
 	background-repeat: repeat-x;
+	background-color: rgb(255,255,255);
 	border:1px solid rgb(120,120,120);
 }
 
